--- a/sketch.ipynb
+++ b/sketch.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,8 +444,12 @@
     "gpt.to(device)\n",
     "\n",
     "train_loss = 0\n",
+    "\n",
     "train_loss_step = 10\n",
-    "sample_step = 50\n",
+    "val_loss_step = 50\n",
+    "sample_step = 100\n",
+    "checkpoint_step = 500\n",
+    "\n",
     "for e in range(epoch):\n",
     "    \n",
     "      for i, (seqs, targets) in enumerate(train_dataloader):\n",
@@ -469,13 +473,19 @@
     "                print(f'Epoch [{e}/{epoch-1}] Batch [{i}/{len(train_dataloader)-1}] Loss: {train_loss/train_loss_step:.4f} Perplexity: {exp(train_loss/train_loss_step):.4f}')\n",
     "                train_loss = 0\n",
     "\n",
-    "            if (i > 0 and i % sample_step == 0):\n",
+    "            if (i > 0 and i % val_loss_step == 0):\n",
     "                val_loss = evaluate(gpt, criterion, 20, val_dataloader, device)\n",
     "                print(f'Val loss: {val_loss:4f} Val Perplexity: {exp(val_loss):4f}')\n",
     "            \n",
-    "            if (i % 100 == 0):\n",
+    "            if (i > 0 and i % sample_step == 0):\n",
     "                with open(\"/kaggle/working/samples.txt\", \"a\") as f:\n",
-    "                    f.write(f'\\n\\nIteration {i + e*len(train_dataloader)}: \\n{sample(gpt, tokenizer, device, \"So,\", 0.6)}')"
+    "                    f.write(f'\\n\\nIteration {i + e*len(train_dataloader)}: \\n{sample(gpt, tokenizer, device, \"So,\", 0.6)}')\n",
+    "\n",
+    "            if (i > 0 and i % checkpoint_step == 0):\n",
+    "                torch.save({\n",
+    "                    'model_state_dict': gpt.state_dict(),\n",
+    "                    'optimizer_state_dict': opt.state_dict(),\n",
+    "                }, f'checkpoint_{i + e*len(train_dataloader)}.pth')"
    ]
   },
   {
@@ -495,6 +505,13 @@
     "gpt.to(device)\n",
     "print(sample(gpt, tokenizer, device, ''))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
